# kmerDecoder

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/__later/: macos.yml  windows.yml
.github/workflows/: install.yml  macos.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: tools.cmake
include/: inputModule.hpp  kmerDecoder.hpp
include/HashUtils/: aaHasher.hpp  hashutil.hpp
include/hashUtils/: aaHasher.hpp  hashutil.hpp
lib/kseq/: CMakeLists.txt  README.md
lib/kseq/cmake/: CPM_0.30.0.cmake
src/: KD_aakmers.cpp  KD_kmers.cpp  KD_minimizers.cpp  KD_skipmers.cpp  kmerDecoder.cpp  kmers.cpp  minimizers.cpp  skipmers.cpp
src/HashUtils/: aaHasher.cpp  hashutil.cpp
src/hashUtils/: aaHasher.cpp  hashutil.cpp
test/: CMakeLists.txt
test/sources/: beta.cpp  test_aaHasher.cpp  test_parsing.cpp
test/test_data/: 10k_aa.fa  mixed_headers.fa
